--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.6.1"
+    "mongoose": "^6.6.1",
+    "concurrently": "^7.4.0"
   },
   "devDependencies": {
-    "concurrently": "^7.4.0",
     "nodemon": "^2.0.20"
   }
 }
