--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "colors": "^1.4.0",
+    "concurrently": "^7.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.6.1",
-    "concurrently": "^7.4.0"
+    "mongoose": "^6.6.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
