--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node backend/server.js",
     "server": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
-    "both": "concurrently \"npm run client\" \"npm run server\""
+    "both": "concurrently \"npm run client\" \"npm run server\"",
+    "build": "cd ./frontend && npm run build"
   },
   "author": "",
   "license": "ISC",
